--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.8.1",
+    "@prisma/client": "^5.22.0",
+    "@types/bcryptjs": "^3.0.0",
+    "bcryptjs": "^3.0.3",
     "negotiator": "^1.0.0",
     "next": "13.5.6",
     "react": "^18",
@@ -17,13 +20,17 @@
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.33",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "install": "^0.13.0",
+    "npm": "^11.9.0",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
