feat: implement dynamic products and categories with pagination and filtering

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Database
 DATABASE_URL="postgresql://postgres:&!3tE9.T3Gd!&hf@db.opjdnghtpvltwalfpgjs.supabase.co:5432/postgres"
-
+url ="postgresql://postgres.opjdnghtpvltwalfpgjs:Ra0794420337@aws-1-eu-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+directUrl="postgresql://postgres.opjdnghtpvltwalfpgjs:Ra0794420337@aws-1-eu-west-1.pooler.supabase.com:5432/postgres"
 # Admin Defaults (Initial Setup)
 ADMIN_EMAIL="admin@madeinbled.com"
 ADMIN_PASSWORD="admin123"
