feat: make contact form functional with email sending and product context

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ directUrl="postgresql://postgres.opjdnghtpvltwalfpgjs:Ra0794420337@aws-1-eu-west
 # Admin Defaults (Initial Setup)
 ADMIN_EMAIL="admin@madeinbled.com"
 ADMIN_PASSWORD="admin123"
+
+# SMTP Configuration
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=465
+SMTP_USER=""
+SMTP_PASS=""
