--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "bcryptjs": "^3.0.3",
     "negotiator": "^1.0.0",
     "next": "13.5.6",
+    "nodemailer": "^8.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.4",
     "@types/node": "^20.19.33",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
