--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.22.0",
     "@types/bcryptjs": "^3.0.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "negotiator": "^1.0.0",
     "next": "13.5.6",
     "nodemailer": "^8.0.1",
