chore: include .env file in repository

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=465
 SMTP_USER=""
 SMTP_PASS=""
+
+CLOUDINARY_CLOUD_NAME="de74fefoz"
+CLOUDINARY_API_KEY="793729885577272"
+CLOUDINARY_API_SECRET="DzfkajcpMNRF-0d7xW66oBUIKeQ"
