--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcryptjs": "^3.0.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
+    "lucide-react": "^0.563.0",
     "negotiator": "^1.0.0",
     "next": "13.5.6",
     "nodemailer": "^8.0.1",
