--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.11",
     "@types/negotiator": "^0.6.4",
     "@types/node": "^20.19.33",
     "@types/nodemailer": "^7.0.9",
