Update URLs and contact email config

--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ ADMIN_PASSWORD="admin123"
 # SMTP Configuration
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=465
-SMTP_USER=""
-SMTP_PASS=""
+SMTP_USER="madeinbledtrading@gmail.com"
+SMTP_PASS="tlyv vrzv zmxm ulfx"
 
 CLOUDINARY_CLOUD_NAME="de74fefoz"
 CLOUDINARY_API_KEY="793729885577272"
